--- a/deploy.yml
+++ b/deploy.yml
@@ -29,3 +29,9 @@ spec:
             requests:
               memory: 128Mi
               cpu: "0.2"
+          livenessProbe:
+            httpGet:
+              path: /revisasivivo
+              port: 4500
+            initialDelaySeconds: 5
+            periodSeconds: 5
